--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+    compile('junit:junit:4.13')
+    testImplementation('junit:junit:4.13')
 }
