--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.12'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+}
+test {
+    useJUnitPlatform()
 }
